adjust docker-file

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,12 +4,12 @@ services:
     env_file:
       - .env
     depends_on:
-      db:
+      bot-db:
         condition: service_healthy
     volumes:
       - ./translations:/translations
 
-  db:
+  bot-db:
     image: postgres:17
     container_name: 'remnawave-telegram-shop-db'
     hostname: remnawave-telegram-shop-db
@@ -22,7 +22,7 @@ services:
       - POSTGRES_DB=${POSTGRES_DB}
       - TZ=UTC
     ports:
-      - '127.0.0.1:5432:5432'
+      - '127.0.0.1:6768:5432'
     volumes:
       - remnawave-telegram-shop-db-data:/var/lib/postgresql/data
     healthcheck:
@@ -30,17 +30,6 @@ services:
       interval: 3s
       timeout: 10s
       retries: 3
-
-#  ngrok:
-#    image: ngrok/ngrok:latest
-#    command:
-#      - "http"
-#      - "http://bot:8080"
-#    environment:
-#      NGROK_AUTHTOKEN: TOKEN
-#    ports:
-#      - 4040:4040
-
 volumes:
   remnawave-telegram-shop-db-data:
     driver: local
